--- a/package.json
+++ b/package.json
@@ -67,5 +67,8 @@
     "react-dom": "^17.0.2",
     "react-styleguidist": "^11.1.7",
     "webpack": "^5.52.1"
+  },
+  "dependencies": {
+    "@knight-lab/timelinejs": "^3.8.20"
   }
 }
