--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@babel/preset-react": "^7.14.5",
     "@material-ui/core": "^4.12.3",
     "babel-loader": "^8.2.2",
+    "css-loader": "^6.6.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-jsx-a11y": "^6.4.1",
@@ -60,15 +61,19 @@
     "eslint-plugin-react": "^7.25.1",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^7.0.2",
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0",
     "lint-staged": "^11.1.2",
     "prettier": "^2.4.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-styleguidist": "^11.1.7",
+    "style-loader": "^3.3.1",
     "webpack": "^5.52.1"
   },
   "dependencies": {
-    "@knight-lab/timelinejs": "^3.8.20"
+    "@knight-lab/timelinejs": "^3.8.20",
+    "timelinejs-react": "^1.1.1"
   }
 }
