--- a/package.json
+++ b/package.json
@@ -74,6 +74,10 @@
   },
   "dependencies": {
     "@knight-lab/timelinejs": "^3.8.20",
+    "axios": "^0.26.0",
+    "react-markdown": "^8.0.0",
+    "react-remark": "^2.1.0",
+    "showdown": "^2.0.0",
     "timelinejs-react": "^1.1.1"
   }
 }
